[gd_scene load_steps=3 format=3 uid="uid://bedhx77dmqtei"]

[ext_resource type="Script" path="res://NotGames/prog_88a.gd" id="1_rdovm"]

[sub_resource type="LabelSettings" id="LabelSettings_xwmx3"]
font_size = 25

[node name="prog_88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rdovm")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 24.0
offset_right = 256.0
offset_bottom = 160.0
alignment = 1

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 24.0
offset_right = 896.0
offset_bottom = 160.0
alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 472.0
offset_right = 384.0
offset_bottom = 552.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 560.0
offset_right = 648.0
offset_bottom = 640.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 472.0
offset_right = 920.0
offset_bottom = 552.0
text = "Close"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 160.0
offset_right = 736.0
offset_bottom = 472.0
label_settings = SubResource("LabelSettings_xwmx3")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
